tests/derive_ui/subcommand_opt_opt.stderr
error: Option<Option<T>> types are not supported for subcommand
  --> tests/derive_ui/subcommand_opt_opt.rs:17:10
   |
17 |     cmd: Option<Option<Command>>,
   |          ^^^^^^
